# tenk

./: .eslintignore  .eslintrc  .eslintrc.js  .gitignore  Cargo.toml  README.md  api_token.ts  asset-manifest.json  ava.config.cjs  build.sh  commands.md  current_tokens.csv  index.html  modules.html  package-lock.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  gui.yml  preview.yml  testnet.yml  tests-mac.yml  tests.yml
__test__/: addFunds.ts  admin.ava.ts  allowance.ava.ts  api_token.ts  burn.ava.ts  deploy.ts  downloadContract.ts  gif.ava.ts  linkdrop.ava.ts  metadata.ts  mintbase.ts  multi-value.ava.ts  nft-uploader-launch.ts  nft-uploader.ts  nft.ava.ts  nft.spec.ts  paras.ava.ts  premint.ava.ts  royalties.ava.ts  rt.ava.ts  start_at_one.ts  util.ts  utils.ts
__test__/contracts/: mintbase_marketplace_contract.wasm  paras-marketplace-v1.testnet.wasm  paras.wasm  paras_marketplace_contract.wasm  roketo.wasm
__test__/linkdrop/: fail.ava.ts  linkdrop-fail.ava.ts  linkdrop-success.ava.ts  success.ava.ts
__test__/util/: bin.ts  delta.ts  index.ts
assets/: highlight.css  search.js  tong
classes/: Contract.html
contract/: Cargo.toml  build.sh
contract/src/: lib.rs  raffle.rs
contracts/contract-utils/: Cargo.toml
contracts/contract-utils/src/: lib.rs
contracts/sandbox-linkdrop/: Cargo.toml
contracts/sandbox-linkdrop/src/: lib.rs
contracts/tenk/: Cargo.toml  build.sh  example_flow.sh  index.schema.json  index.wit  schema.json  sdk.wit  tsconfig.json  witgen.wit
contracts/tenk/res/: index.ts
contracts/tenk/src/: action.rs  airdrop.rs  events.rs  lib.rs  linkdrop.rs  owner.rs  payout.rs  raffle.rs  raffle_collection.rs  standards.rs  types.rs  user.rs  util.rs  views.rs
contracts/tenk/ts/: helper.ts  index.ts
docs/: index.html  modules.html
docs/assets/: search.js
docs/classes/: Contract.html
docs/enums/: Status.html
docs/interfaces/: AddAdmin.html  AddWhitelistAccountUngaurded.html  AddWhitelistAccounts.html  Admins.html  CheckKey.html  CloseContract.html  CloseSale.html  CostOfLinkdrop.html  CostPerToken.html  CreateLinkdrop.html  DeleteLinkdrop.html  FungibleTokenMetadata.html  GetKeyBalance.html  GetLinkdropContract.html  GetSaleInfo.html  GetUserSaleInfo.html  Initial.html  InitialMetadata.html  MintRateLimit.html  New.html  NewDefaultMeta.html  NftApprove.html  NftContractMetadata.html  NftIsApproved.html  NftMetadata.html  NftMint.html  NftMintMany.html  NftMintOne.html  NftPayout.html  NftRevoke.html  NftRevokeAll.html  NftSupplyForOwner.html  NftToken.html  NftTokens.html  (+33 more)
enums/: Status.html
gui/: .env  .env.production  .eslintignore  .gitattributes  package-lock.json  package.json
interfaces/: ChangeMethodOptions.html  FungibleTokenMetadata.html  InitialMetadata.html  NftContractMetadata.html  Payout.html  PriceStructure.html  Royalties.html  Sale.html  SaleInfo.html  StorageBalance.html  StorageBalanceBounds.html  Token.html  TokenMetadata.html  UserSaleInfo.html  ViewFunctionOptions.html
neardev/: dev-account  dev-account.env
scripts/: add-whitelist.js  add-whitelist.ts  addFunds.ts  burn_tokens.ts  car-uploader.ts  check_key.ts  create-keys.ts  create-linkdrops-urls.ts  create-linkdrops.js  create-linkdrops.ts  create-links.ts  deploy-pandas.ts  deploy-zodiac.js  deploy.ts  deploy_rt.ts  downloadContract.ts  gen-account-from-seedphrase.ts  gen-json.js  gen-seedpharse-key.ts  get-tokens.ts  icon.ts  mint.ts  nft-uploader-icon.ts  nft-uploader-launch-tong.ts  nft-uploader-launch.ts  nft-uploader.ts  tokens.ts  transform_metadata.ts  update-metadata.ts  update-royalties.ts  update-whitelist.ts  update_royalites.ts  utils.ts  whitelist-drop.ts
test/: api.test.js  config.js  near-utils.js  nft.spec.ts  test-utils.js
utils/: patch-config.js
(+2152 files in other folders)
