[package]
name = "nft-standard"
version = "0.1.0"
authors = ["Ryan Mehta <ryan.mehta@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.1"
near-contract-standards = "4.0.0-pre.1"

[dev-dependencies]
rand = "0.7.2"
trybuild = "1.0"
rustversion = "1.0"
rand_xorshift = "0.2.0"
quickcheck = "0.9.2"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

