[package]
name = "contract-utils"
version = "0.1.0"
authors = ["Willem Wyndham <willem@cs.umd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = { git = "https://github.com/willemneal/near-sdk-rs", branch = "feat/nft_refund_option"}
