[package]
name = "sandbox-linkdrop"
version = "0.1.0"
authors = ["Ryan Mehta <ryan.mehta@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { git = "https://github.com/willemneal/near-sdk-rs", branch = "feat/nft_refund_option"}
contract-utils =  { path = "../contract-utils" }