[package]
name = "tenk"
version = "0.1.0"
authors = ["Willem Wyndham <willem@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# near-sdk = { path = "../../../near-sdk-rs/near-sdk"}
# near-contract-standards = { path = "../../../near-sdk-rs/near-contract-standards" }
near-sdk = { git = "https://github.com/ahalabs/near-sdk-rs", tag = "v4.0.0-0"}
near-contract-standards = { git = "https://github.com/ahalabs/near-sdk-rs", tag = "v4.0.0-0" }
serde = "1.0.0"
near-units = "0.2.0"
serde_with = "1.0.0"

[dev-dependencies]
rand = "0.7.2"
rand_xorshift = "0.2.0"

[features]
default = []
mainnet = []
airdrop = []
